message ActionDatastable
{
	optional string tname = 1;
	repeated ActionDatas tlist = 2;
}

message ActionDatas
{
	required int32 ID = 1;
	optional string Name = 2;
	optional bool IgnoreMove = 3;
	optional bool IgnoreGravity = 4;
	optional bool IgnoreCollision = 5;
	optional bool IgnoreXZVelocity = 6;
	optional bool IgnoreXZMove = 7;
}