message ItemDatastable
{
	optional string tname = 1;
	repeated ItemDatas tlist = 2;
}

message ItemDatas
{
	required int32 ID = 1;
	optional string Name = 2;
	optional int32 MainType = 3;
	optional int32 SubType = 4;
	optional int32 EquipIdx = 5;
	optional int32 UnitId = 6;
	optional string Icon = 7;
	optional string Desc = 8;
	optional int32 Quality = 9;
	optional int32 HP = 10;
	optional int32 MP = 11;
	optional int32 Damage = 12;
	optional int32 Def = 13;
	optional int32 Speed = 14;
	optional int32 CritDamage = 15;
	optional int32 Crit = 16;
	optional int32 Coin = 17;
	optional int32 Stack = 18;
	optional int32 Size = 19;
}