message WeaponDatastable
{
	optional string tname = 1;
	repeated WeaponDatas tlist = 2;
}

message WeaponDatas
{
	required int32 ID = 1;
	optional string Name = 2;
	optional string WeaponL = 3;
	optional string TextureL = 4;
	optional string WeaponR = 5;
	optional string TextureR = 6;
	optional string PosAWL = 7;
	optional string PosAWR = 8;
	optional string PosBWL = 9;
	optional string PosBWR = 10;
}